<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_root_sv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/setting_sys_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/white"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/setting_pwd_edit"
                style="@style/profile_layout_style" >

                <TextView
                    style="@style/profile_textview_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/myprofile_title_h2_left_margins"
                    android:drawableLeft="@drawable/setting_pwd_edit"
                    android:text="@string/setting_edit_pwd" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/myprofile_title_h2_left_margins"
                android:background="@color/list_devider" />

            <RelativeLayout style="@style/profile_layout_style" >

                <TextView
                    style="@style/profile_textview_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/myprofile_title_h2_left_margins"
                    android:drawableLeft="@drawable/setting_msg_push"
                    android:text="@string/setting_msg_push" />

                <CheckBox
                    android:button="@null"
                    android:id="@+id/setting_push_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/setting_push_switch_selector" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/myprofile_title_h2_left_margins"
                android:background="@color/list_devider" />

            <RelativeLayout
                android:id="@+id/setting_about_us"
                style="@style/profile_layout_style" >

                <TextView
                    style="@style/profile_textview_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/myprofile_title_h2_left_margins"
                    android:drawableLeft="@drawable/setting_about_us"
                    android:text="@string/setting_about_us" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/account_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            android:background="@drawable/setting_logout_bg_selector"
            android:text="@string/account_logout" />
    </LinearLayout>

</ScrollView>